--- a/poke_api.ipynb
+++ b/poke_api.ipynb
@@ -22,15 +22,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "1e2a595a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poke_res = requests.get('https://pokeapi.co/api/v2/pokemon/')\n",
     "poke_res.ok\n",
     "poke_res.json\n",
-    "data = poke_res.json()"
+    "data = poke_res.json()\n",
+    "\n",
+    "poke_res"
    ]
   },
   {
@@ -133,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "507ca1c9",
    "metadata": {},
    "outputs": [
@@ -141,19 +154,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://pokeapi.co/api/v2/pokemon//pokemon.jsonsalamence\n"
+      "https://pokeapi.co/api/v2/pokemon\n",
+      "200\n",
+      "{'count': 1279, 'next': 'https://pokeapi.co/api/v2/pokemon?offset=20&limit=20', 'previous': None, 'results': [{'name': 'bulbasaur', 'url': 'https://pokeapi.co/api/v2/pokemon/1/'}, {'name': 'ivysaur', 'url': 'https://pokeapi.co/api/v2/pokemon/2/'}, {'name': 'venusaur', 'url': 'https://pokeapi.co/api/v2/pokemon/3/'}, {'name': 'charmander', 'url': 'https://pokeapi.co/api/v2/pokemon/4/'}, {'name': 'charmeleon', 'url': 'https://pokeapi.co/api/v2/pokemon/5/'}, {'name': 'charizard', 'url': 'https://pokeapi.co/api/v2/pokemon/6/'}, {'name': 'squirtle', 'url': 'https://pokeapi.co/api/v2/pokemon/7/'}, {'name': 'wartortle', 'url': 'https://pokeapi.co/api/v2/pokemon/8/'}, {'name': 'blastoise', 'url': 'https://pokeapi.co/api/v2/pokemon/9/'}, {'name': 'caterpie', 'url': 'https://pokeapi.co/api/v2/pokemon/10/'}, {'name': 'metapod', 'url': 'https://pokeapi.co/api/v2/pokemon/11/'}, {'name': 'butterfree', 'url': 'https://pokeapi.co/api/v2/pokemon/12/'}, {'name': 'weedle', 'url': 'https://pokeapi.co/api/v2/pokemon/13/'}, {'name': 'kakuna', 'url': 'https://pokeapi.co/api/v2/pokemon/14/'}, {'name': 'beedrill', 'url': 'https://pokeapi.co/api/v2/pokemon/15/'}, {'name': 'pidgey', 'url': 'https://pokeapi.co/api/v2/pokemon/16/'}, {'name': 'pidgeotto', 'url': 'https://pokeapi.co/api/v2/pokemon/17/'}, {'name': 'pidgeot', 'url': 'https://pokeapi.co/api/v2/pokemon/18/'}, {'name': 'rattata', 'url': 'https://pokeapi.co/api/v2/pokemon/19/'}, {'name': 'raticate', 'url': 'https://pokeapi.co/api/v2/pokemon/20/'}]}\n"
      ]
     }
    ],
    "source": [
-    "base_url = \"https://pokeapi.co/api/v2/pokemon/\"\n",
-    "api_method = \"/pokemon.json\"\n",
-    "id = \"salamence\"\n",
+    "base_url = \"https://pokeapi.co/api/v2\"\n",
+    "api_method = \"/pokemon\"\n",
     "\n",
     "\n",
-    "api_url = f\"{base_url}{api_method}{id}\"\n",
+    "\n",
+    "api_url = f\"{base_url}{api_method}\"\n",
     "print(api_url)\n",
-    "api_url.respon"
+    "\n",
+    "poke_res = requests.get(api_url)\n",
+    "print(poke_res.status_code)\n",
+    "poke_data = poke_res.json()\n",
+    "print(poke_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d107dea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'height' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m height \u001b[39m=\u001b[39m poke_data[{height}]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'height' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "height = poke_data[{height}]"
    ]
   },
   {
@@ -163,10 +204,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PokeAPI:\n",
-    "    base_url = \"https://pokeapi.co/api/v2/\"\n",
+    "# class PokeAPI:\n",
+    "#     base_url = \"https://pokeapi.co/api/v2/\"\n",
     "\n",
-    "    def __get(self,)"
+    "#     def __get(self, **params): # Private method - can only be called from other methods within the class\n",
+    "#     request_url = f\"{self.base_url}{api_method}\"\n",
+    "        "
    ]
   }
  ],
